# openai-schemars

./: Cargo.toml  README.md
src/: lib.rs
