[package]
name = "openai-schemars"
version = "0.1.0"
edition = "2024"
description = "A Rust utility to generate JSON Schemas compatible with OpenAI's function calling API"
license = "Apache-2.0"
repository = "https://github.com/sensorial-systems/openai-schemars"
authors = ["Danilo Guanabara <danilo@sensorial.systems>"]
keywords = ["openai", "json", "schema"]
documentation = "https://docs.rs/openai-schemars"
readme = "README.md"

[dependencies]
serde_json = "1.0"
schemars   = "0.8"